--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 </head>
 <body>
     <div class="card">
-        <div>
+        <div class="estrela">
             <img src="./images/icon-star.svg" alt="icone de uma estrela laranja">
         </div>
 
         <h1>Como foi o atendimento?</h1>
 
         <p>Conte-nos como foi nossa ajuda com sua solicitação. Agradecemos muito seu feedback para podermos melhorar nosso atendimento!</p>
-    </div>
-    <div>
+    
+    <div class="notas">
         <button>1</button>
         <button>2</button>
         <button>3</button>
         <button>4</button>
         <button>5</button>
     </div>
+
+    <button>Enviar</button>
 </body>
 </html>
